Docker: review classpath, separate openjfx modules configuration, introduce DAVMAIL_PROPERTIES env variable
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3817 3d1905a2-6b24-0410-a738-b14d5a86fcbd